--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ ext.versionJunit = "4.12"
 
 ext.versionHSQLdb = "2.3.4"
 
+configurations {
+    provided
+}
+
 repositories {
     mavenLocal()
     mavenCentral()
@@ -51,28 +55,28 @@ sourceSets {
 //}
 
 dependencies {
-  //compile "org.scala-lang:scala-library:${versionScala}"
+  compile "org.scala-lang:scala-library:${versionScala}"
   compile "org.scala-lang:scala-reflect:${versionScala}"
   compile "org.scala-lang.modules:${artifactScalaXML}:${versionScalaXML}"
 
   compile "commons-logging:commons-logging:${versionCommonsLogging}"
 
-  //compile "org.springframework:spring-core:${versionSpring}"
-  //compile "org.springframework:spring-beans:${versionSpring}"
-  //compile "org.springframework:spring-aop:${versionSpring}"
-  //compile "org.springframework:spring-context:${versionSpring}"
-  compile "org.springframework:spring-web:${versionSpring}"
-  compile "org.springframework:spring-jdbc:${versionSpring}"
-  compile "org.springframework:spring-jms:${versionSpring}"
-  compile "org.springframework:spring-test:${versionSpring}"	// test ?!?
+  compileOnly "org.springframework:spring-core:${versionSpring}"
+  compileOnly "org.springframework:spring-beans:${versionSpring}"
+  compileOnly "org.springframework:spring-aop:${versionSpring}"
+  compileOnly "org.springframework:spring-context:${versionSpring}"
+  compileOnly "org.springframework:spring-web:${versionSpring}"
+  compileOnly "org.springframework:spring-jdbc:${versionSpring}"
+  compileOnly "org.springframework:spring-jms:${versionSpring}"
+  compileOnly "org.springframework:spring-test:${versionSpring}"	// test ?!?
   
-  compile "javax.jms:javax.jms-api:${versionJavaxJMS}"
+  compileOnly "javax.jms:javax.jms-api:${versionJavaxJMS}"
   
-  compile "com.fasterxml.jackson.module:${artifactJacksonScala}:${versionJacksonScala}"
+  compileOnly "com.fasterxml.jackson.module:${artifactJacksonScala}:${versionJacksonScala}"
   
   testCompile "org.scalatest:${artifactScalatest}:${versionScalatest}"
   testCompile "junit:junit:${versionJunit}"
-  testCompile 'javax.inject:javax.inject:1'
+  provided 'javax.inject:javax.inject:1'
   
   testRuntime "org.hsqldb:hsqldb:${versionHSQLdb}"
   testRuntime "org.springframework:spring-aspects:${versionSpring}"
