--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     compileOnly "org.springframework:spring-test:${versionSpring}"    // test ?!?
 
     compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
-    compile group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
+    compileOnly group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
     compileOnly "javax.jms:javax.jms-api:${versionJavaxJMS}"
 
     compileOnly "com.fasterxml.jackson.module:${artifactJacksonScala}:${versionJacksonScala}"
